kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/023_mt_att_ref.kmt
/* $Id: 023_mt_att_ref.kmt,v 1.1 2006-12-19 12:00:49 dvojtise Exp $
 * Creation date: November 10, 2006
 * License: EPL
 * Authors:
 * 	Didier Vojtisek
 * Description:
 *		This verifies the various possibilities about reference versus attribute
 */
@mainClass "fsm::Main"
@mainOperation "main"


package mt_att_ref;


require kermeta
using kermeta::standard

modeltype mRef {
  class A {
    reference aB : B#aA
  }

  class B {
  	reference aA : A#aB
  }
}
class NeedsMRef<MT : mRef> { }


modeltype mAtt {
  class A {
    attribute aB : B#aA
  }

  class B {
  	reference aA : A#aB
  }
}
class NeedsMAtt<MT : mAtt> { }

  