kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/021_fsm_mustfail.kmt
/* $Id: 021_fsm_mustfail.kmt,v 1.1 2006-12-20 16:53:37 dvojtise Exp $
 * Creation date: November 10, 2006
 * License: EPL
 * Authors:
 *     Jim Steel
 *	   Didier Vojtisek
 */
@mainClass "fsm::Main"
@mainOperation "main"


package fsm;
require "../valid/021_minimization.kmt"
require "../valid/021_mandstart_fsm_type.kmt"
require "../valid/021_multstart_fsm_type.kmt"
require "../valid/021_composite_fsm_type.kmt"
require "../valid/021_finalstates_fsm_type.kmt"


require kermeta
class Main
{
    operation testmain() : Void is do 
		Minimizer<basic_fsm>.new.minimizeAll(basic_fsm.new)
		//Minimizer<mandstart_fsm>.new.minimizeAll(mandstart_fsm.new)
	    Minimizer<multstart_fsm>.new.minimizeAll(multstart_fsm.new)
		Minimizer<finalstates_fsm>.new.minimizeAll(finalstates_fsm.new)
		Minimizer<composite_fsm>.new.minimizeAll(composite_fsm.new)
    end
}